--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly 'com.arcaniax:HeadDatabase-API:1.3.1'
     compileOnly 'org.waraccademy:RoleplayItems:1.0.0-SNAPSHOT'
     compileOnly 'org.waraccademy:Containers:1.0.1-SNAPSHOT'
@@ -65,5 +65,6 @@ processResources {
 
 shadowJar{
     relocate 'com.glyart.mystral' , 'org.waraccademy.posta.mystral'
+    relocate 'com.zaxxer.hikari' , 'org.waraccademy.posta.hikari'
     relocate 'de.tr7zw.changeme.nbtapi' , 'org.waraccademy.posta.nbtapi'
 }
